Fix tabla publicaciones en empresas

--- a/css/core.css
+++ b/css/core.css
@@ -10067,6 +10067,10 @@ a.list-group-item:hover {
     }
 }
 
+.acciones-publicacion {
+    width: 157px;
+}
+
 
 /* =================================================================
   Seccion Empleos-Detalles
