Integracion de pantalla error 404, aceptacion de cookies. Plantilla invitacion nuevos usuarios via email

--- a/css/core.css
+++ b/css/core.css
@@ -9916,6 +9916,22 @@ a.text-grey:hover .underline {
     color: #fff;
 }
 
+.cookies-alert {
+    position: fixed;
+    bottom: 0px;
+    text-align: center;
+    background-color: #b0e0f2;
+    z-index: 9999;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.btn-cookies {
+    border-radius: 5px;
+    border-color: #2E3192 !important;
+    background-color: #2E3192 !important;
+}
+
 
 /* =================================================================
   Promociones
