--- a/css/navbar-styles.css
+++ b/css/navbar-styles.css
@@ -15,7 +15,7 @@
     }
     .site-header .navbar-nav .nav-link:hover {
         color: #00aeef;
-        border-bottom: 3px solid #00aeef;
+        /* border-bottom: 3px solid #00aeef; */
     }
     .site-header .navbar {
         background: white !important;
