--- a/css/core.css
+++ b/css/core.css
@@ -1767,9 +1767,9 @@ footer .f-menu ul li {
     margin-bottom: 0.25rem;
 }
 
-footer .f-menu ul li a {
+footer .f-menu ul a li {
     color: #777;
-    border-bottom: 1px solid transparent;
+    /* border-bottom: 1px solid transparent; */
     -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
@@ -9805,6 +9805,29 @@ a.text-grey:hover .underline {
     border-left: 0px !important;
     background-color: #2E3192 !important;
     color: #fff !important;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+.sidebar-index-hover:focus {
+    border-left: 0px !important;
+    background-color: #2E3192 !important;
+    color: #fff !important;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+
+/* .footer-hover:hover {
+    background-color: #2E3192 !important;
+} */
+
+.footer-hover:hover {
+    border-left: 0px !important;
+    background-color: #2E3192 !important;
+    color: #fff !important;
+    -webkit-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 @media(max-width: 500px) {
@@ -9858,8 +9881,6 @@ a.text-grey:hover .underline {
 
 .btn-see-pub {
     width: 100px;
-    margin-top: 8px;
-    /* border-radius: 5%; */
     background-color: #2E3192 !important;
     border-color: #2E3192 !important;
 }
@@ -10630,11 +10651,12 @@ a.list-group-item:hover {
     text-align: center !important;
 }
 
-.navbar-default .navbar-nav>.open>a,
+
+/* .navbar-default .navbar-nav>.open>a,
 .navbar-default .navbar-nav>.open>a:hover,
 .navbar-default .navbar-nav>.open>a:focus {
     color: #555 !important;
-}
+} */
 
 .dropdown-menu .divider {
     background-color: #AAB2AA;
