Integracion nuevo diseño en seccion Mi cuenta, nuevo boton para volver en la vista previa del CV, nuevos botones de paginacion en Ver Jobbers y nuevo boton de volver en filtro de trabajadores. Fix en header movil de index.

--- a/css/core.css
+++ b/css/core.css
@@ -10010,6 +10010,11 @@ a.text-grey:hover .underline {
     background-color: #2E3192 !important;
 }
 
+.btn-cookies:hover {
+    border-color: #00AEEF !important;
+    background-color: #00AEEF !important;
+}
+
 .overlay-pub {
     position: absolute;
     width: 100%;
