--- a/css/core.css
+++ b/css/core.css
@@ -9771,7 +9771,7 @@ a.text-grey:hover .underline {
     font-size: 17px;
 }
 
-.icon-free {
+.trophy-free {
     color: #43B968;
 }
 
@@ -10883,4 +10883,34 @@ a.list-group-item:hover {
 
 .flaticon-mouse:before {
     content: "\f100";
+}
+
+
+/* Icomoon Icon Eye */
+
+@font-face {
+    font-family: 'icomoon';
+    src: url('./fonts/icomoon.eot?tixqt2');
+    src: url('./fonts/icomoon.eot?tixqt2#iefix') format('embedded-opentype'), url('./fonts/icomoon.ttf?tixqt2') format('truetype'), url('./fonts/icomoon.woff?tixqt2') format('woff'), url('./fonts/icomoon.svg?tixqt2#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"],
+[class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-eye-plus:before {
+    content: "\e9cf";
 }
